Production build update

--- a/build_production/tor-browser/index.html
+++ b/build_production/tor-browser/index.html
@@ -14,7 +14,7 @@
         <meta name="Onion-Location" content="http://ddgoodscoede23n56nlrblsudrlnhgyjwtq5cbpqn4zv24ff7hwvakqd.onion/">
 
         
-        <link rel="stylesheet" href="/assets/css/main.css?id=f4dcd53e284ca670f18a">
+        <link rel="stylesheet" href="/assets/css/main.css?id=13fb6e9cc57c76241927">
 
         
         <script src="/assets/js/main.js?id=9ffbbb84e92b0460dca5" defer></script>
@@ -140,27 +140,41 @@
 ><h1 class="title is-1 mb-4">Tor Browser</h1>
 
             <div class="flex items-center space-x-4">
-                <div class="w-24 h-24 flex items-center">
-                     <figure class="block relative">
+                <div class="w-24 flex items-center">
+                     <figure
+    class="block relative w-full h-full"
+>
     <img
-        class="block h-auto w-full m-0" src="/assets/images/logo-short-2x.png" alt="Логотип dd Marketplace"
+        class="block h-auto w-full m-0"
+        src="/assets/images/logo-short-2x.png"
+        alt="Логотип dd Marketplace"
     >
 </figure>
  
                 </div>
-                <div>+</div>
-                <div class="w-28 h-24 flex items-center">
-                     <figure class="block relative">
+                <div class="text-3xl">+</div>
+                <div class="w-28 flex items-center">
+                     <figure
+    class="block relative w-full h-full"
+>
     <img
-        class="block h-auto w-full m-0" src="/assets/images/tor-color.svg" alt="Логотип Tor"
+        class="block h-auto w-full m-0"
+        src="/assets/images/tor-color.svg"
+        alt="Логотип Tor"
     >
 </figure>
  
                 </div>
-                <div>= ♥️</div>
+                <div class="text-3xl">=</div>
+                <div>
+                     <span
+    class="inline-flex items-center justify-center text-red-500"
+><i class="fad fa-heart fa-5x"></i></span>
+ 
+                </div>
             </div>
 
-            <div class="mt-2 space-y-5">
+            <div class="mt-6 space-y-5">
 
                  <p
     class="max-w-prose leading-relaxed"
@@ -193,9 +207,13 @@
                     <div>
                         <a href="https://torproject.org/ru/">
                             <div class="w-28">
-                                 <figure class="block relative">
+                                 <figure
+    class="block relative"
+>
     <img
-        class="block h-auto w-full m-0" src="/assets/images/tor-color.svg" alt="Логотип Tor"
+        class="block h-auto w-full m-0"
+        src="/assets/images/tor-color.svg"
+        alt="Логотип Tor"
     >
 </figure>
  
